--- a/1 Start Here/Common MyOpenMath Codes.html
+++ b/1 Start Here/Common MyOpenMath Codes.html
@@ -277,6 +277,31 @@
                             </div>
                         </textarea>
                     </div>
+
+                    <div class="iframe-copy">
+                        <p style="font-family: Arial, sans-serif; font-size: 14px; color: #034078; text-align: center; margin-bottom: 10px;">
+                            Contains a responsive iframe element for embedding the Summary Stats Calculator GeoGebra tool into MyOpenMath problems.
+                        </p>
+                        <button onclick="copyCodeToClipboard('summaryStatsGeoGebraTool')" 
+                            style="background-color: #034078; color: white; border: none; padding: 8px 15px; font-size: 14px; border-radius: 5px; cursor: pointer;">
+                            Copy Summary Stats Calculator GeoGebra Tool
+                        </button>
+                        <textarea id="summaryStatsGeoGebraTool" style="position: absolute; left: -9999px;">
+                            <p>Below is the GeoGebra Summary Stats Calculator Tool. If this app is too small to view, you can open the 
+                                <a href="https://www.geogebra.org/material/iframe/id/a8vdcm73" target="_blank" rel="noopener noreferrer">
+                                    application here in a new window
+                                </a>.
+                            </p>
+                            <div style="background-color: #A9D6E5; border: 3px solid #034078; padding: 10px; border-radius: 5px; display: flex; justify-content: center;">
+                                <div style="position: relative; width: 100%; max-width: 800px; padding-top: 48.8%;">
+                                    <iframe scrolling="no" title="Summary Stats Calculator" 
+                                        src="https://www.geogebra.org/material/iframe/id/a8vdcm73/width/1324/height/646/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" 
+                                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
+                                    </iframe>
+                                </div>
+                            </div>
+                        </textarea>
+                    </div>
                     
 
                     <div class="d-flex justify-content-between mt-4">
