Creating a way to dynamically load <section> content into the Lecture Notes pages. New JS file created to do this that is only used in Lecture Notes pages. Style elements added to hide <sections> being loaded and to animate the loading process for the Lecture Notes pages.

--- a/2 Unit One Content/Creating Frequency Distributions.html
+++ b/2 Unit One Content/Creating Frequency Distributions.html
@@ -564,6 +564,9 @@
         tallying data points in each class can be tedious and error-prone. Instead, we’ll use our
         GeoGeobra tool to automate the tallying and format it into a table. The next example
         demonstrates this process.</p>
+
+        <div class="notes-page-break"></div>
+        
     <div class="example">
         <h2 class="example-header"> Example <span class="example-number"></span></h2>
         <p>Using our data from <a href="#example1"></a>, create a frequency distribution with 8 different classes.
