--- a/index.html
+++ b/index.html
@@ -135,9 +135,16 @@
                             </ul>
                             <h3>Chapter 3: Descriptive Statistics</h3>
                             <ul>
-                                <li><a href="2 Unit One Content/Measures of Center.html">Measures of Center</a></li>
+                                <li><a href="2 Unit One Content/Calculating Mean of a Data Set.html">Calculating Mean of a Dataset</a></li>
+                                <li><a href="2 Unit One Content/Calculating Median of a Data Set.html">Calculating Median of a Dataset</a></li>
+                                <li><a href="2 Unit One Content/Calculating Mode of a Data Set.html">Calculating Mode of a Dataset</a></li>
+                                <li><a href="2 Unit One Content/Skewness Affects on Mean Median Mode of a Dataset.html">How Skewness Affects the Mean, Median, and Mode of a Dataset</a></li>
+                                <li><a href="2 Unit One Content/Calculating a Weighted Mean.html">Calculating a Weighted Mean</a></li>
+                                <li><a href="2 Unit One Content/Is Mean Enough to Describe a Dataset.html">Is Mean Enough to Describe a Dataset?</a></li>
                                 <li><a href="2 Unit One Content/Measures of Variation.html">Measures of Variation</a></li>
                                 <li><a href="2 Unit One Content/Measures of Location.html">Measures of Location</a></li>
+                                <li><a href="2 Unit One Content/Chapter 3 Lecture Notes.html">Chapter 3 Lecture Notes
+                                    Complete</a></li>
                             </ul>
                         </section>
 
