Disabled Printing of "next page" and "previous page" buttons at bottom of webpages

--- a/1 Start Here/About This Course.html
+++ b/1 Start Here/About This Course.html
@@ -83,11 +83,11 @@
     <h2>How can I be successful?</h2>
     <p>You should plan to spend 12-15 hours per week engaging with course content, studying, reviewing, and completing assignments. Reading the textbook and watching all videos posted in eLearn will help ensure you understand the concepts covered in the assignments. Active participation in discussion boards is strongly encouraged. By discussing concepts and linking your ideas to those of other students, your learning will deepen and become more meaningful. Consistent effort and proactive engagement with the course materials will set you up for success.</p>
 
-<div class="d-flex justify-content-between mt-4">
+<div class="d-flex justify-content-between mt-4 no-print-nav">
 <button id="prevPage" class="btn btn-outline-primary navigation-link previous" role="button">Previous Page</button>
 <button id="nextPage" class="btn btn-outline-primary navigation-link next" role="button">Next Page</button>
 </div>
-<button id="printNotes" class="btn btn-outline-primary">Print Notes</button>
+<button id="printNotes" class="btn btn-outline-primary no-print-nav">Print Notes</button>
 </div>
 </div>
 </main>
