--- a/1 Start Here/GeoGebra Embed Codes.html
+++ b/1 Start Here/GeoGebra Embed Codes.html
@@ -138,13 +138,13 @@
 <pre id="CItestcalc" style="display: none;">&lt;iframe scrolling="no" title="Confidence Interval and Hypothesis Test Calculator" src="https://www.geogebra.org/material/iframe/id/sqbsgdkk/width/1100/height/651/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="1100px" height="651px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
 </li>
 </ul>
-<div class="d-flex justify-content-between mt-4">
+<div class="d-flex justify-content-between mt-4 no-print-nav">
   <button id="prevPage" class="btn btn-outline-primary navigation-link previous"
       role="button">Previous Page</button>
   <button id="nextPage" class="btn btn-outline-primary navigation-link next"
       role="button">Next Page</button>
 </div>
-<button id="printNotes" class="btn btn-outline-primary">Print Notes</button>
+<button id="printNotes" class="btn btn-outline-primary no-print-nav">Print Notes</button>
 </div>
 </div>
 </main>
