--- a/2 Unit One Content/Calculating a Weighted Mean.html
+++ b/2 Unit One Content/Calculating a Weighted Mean.html
@@ -72,7 +72,7 @@
 </header>
 
 <section>
-    <h1>Calculating a Weighted Mean</h1>
+    <h1>Calculating a Weighted Mean</h1> 
 <p>The mean is a fundamental measure of central tendency, but not all data points contribute equally in every scenario. In cases where there are a lot of repeated values, we use the weighted mean to calculate the mean faster than a standard calculation. This section will explore different methods for calculating a weighted mean and demonstrate its applications through practical examples.</p>
 <h2>Weighted Means</h2>
 <h3 class="example-header">Example 1</h3>
@@ -271,11 +271,11 @@ Exam 3,76,0.20
 </section>
 
 
-<div class="d-flex justify-content-between mt-4">
+<div class="d-flex justify-content-between mt-4 no-print-nav">
 <button id="prevPage" class="btn btn-outline-primary navigation-link previous" role="button">Previous Page</button>
 <button id="nextPage" class="btn btn-outline-primary navigation-link next" role="button">Next Page</button>
 </div>
-<button id="printNotes" class="btn btn-outline-primary">Print Notes</button>
+<button id="printNotes" class="btn btn-outline-primary no-print-nav">Print Notes</button>
 </div>
 </div>
 </main>
