--- a/2 Unit One Content/Is Mean Enough to Describe a Dataset.html
+++ b/2 Unit One Content/Is Mean Enough to Describe a Dataset.html
@@ -95,11 +95,11 @@
 <p>In conclusion, the mean alone is not always sufficient to fully describe a dataset. While it offers a measure of central tendency, other statistics such as range, variance, or standard deviation are essential to understand the data’s variability and distribution. As shown in this example, two datasets with identical means can represent very different patterns.</p>
 </section>
 
-<div class="d-flex justify-content-between mt-4">
+<div class="d-flex justify-content-between mt-4 no-print-nav">
 <button id="prevPage" class="btn btn-outline-primary navigation-link previous" role="button">Previous Page</button>
 <button id="nextPage" class="btn btn-outline-primary navigation-link next" role="button">Next Page</button>
 </div>
-<button id="printNotes" class="btn btn-outline-primary">Print Notes</button>
+<button id="printNotes" class="btn btn-outline-primary no-print-nav">Print Notes</button>
 </div>
 </div>
 </main>
