--- a/2 Unit One Content/Skewness Affects on Mean Median Mode of a Dataset.html
+++ b/2 Unit One Content/Skewness Affects on Mean Median Mode of a Dataset.html
@@ -139,11 +139,11 @@
 <p>The mean, median, and mode each describe the center of a dataset but respond differently to outliers and skewness. The mean is sensitive to extreme values and shifts in the direction of skewness, while the median is resistant to outliers and better represents center in skewed distributions. The mode remains unchanged by outliers and identifies the most frequently occurring value(s). Understanding these differences helps in choosing the most appropriate measure for analyzing real-world data.  We will explore that issue in more depth later in this chapter.</p>
 </section>
 
-<div class="d-flex justify-content-between mt-4">
+<div class="d-flex justify-content-between mt-4 no-print-nav">
 <button id="prevPage" class="btn btn-outline-primary navigation-link previous" role="button">Previous Page</button>
 <button id="nextPage" class="btn btn-outline-primary navigation-link next" role="button">Next Page</button>
 </div>
-<button id="printNotes" class="btn btn-outline-primary">Print Notes</button>
+<button id="printNotes" class="btn btn-outline-primary no-print-nav">Print Notes</button>
 </div>
 </div>
 </main>
