--- a/1 Start Here/Course Syllabus.html
+++ b/1 Start Here/Course Syllabus.html
@@ -406,13 +406,13 @@
                         <li>Course name and I.D. for which you require assistance.</li>
                         <li>A complete description of the problem for which you require assistance.</li>
                     </ul>
-                    <div class="d-flex justify-content-between mt-4">
+                    <div class="d-flex justify-content-between mt-4 no-print-nav">
                         <button id="prevPage" class="btn btn-outline-primary navigation-link previous"
                             role="button">Previous Page</button>
                         <button id="nextPage" class="btn btn-outline-primary navigation-link next" role="button">Next
                             Page</button>
                     </div>
-                    <button id="printNotes" class="btn btn-outline-primary">Print Notes</button>
+                    <button id="printNotes" class="btn btn-outline-primary no-print-nav">Print Notes</button>
                 </div>
             </div>
         </main>
