--- a/2 Unit One Content/Calculating Median of a Data Set.html
+++ b/2 Unit One Content/Calculating Median of a Data Set.html
@@ -299,11 +299,11 @@
 <p>The median is a valuable measure of central tendency because it is resistant to outliers. By understanding how to calculate the median manually and using technology, we can analyze data more effectively in various contexts.</p>
 </section>
 
-<div class="d-flex justify-content-between mt-4">
+<div class="d-flex justify-content-between mt-4 no-print-nav">
 <button id="prevPage" class="btn btn-outline-primary navigation-link previous" role="button">Previous Page</button>
 <button id="nextPage" class="btn btn-outline-primary navigation-link next" role="button">Next Page</button>
 </div>
-<button id="printNotes" class="btn btn-outline-primary">Print Notes</button>
+<button id="printNotes" class="btn btn-outline-primary no-print-nav">Print Notes</button>
 </div>
 </div>
 </main>
