--- a/test.html
+++ b/test.html
@@ -131,7 +131,7 @@
             </ul>
         </section> -->
 
-        <div class="d-flex justify-content-between mt-4">
+        <div class="d-flex justify-content-between mt-4 no-print-nav">
             <button id="prevPage" class="btn btn-outline-primary navigation-link previous" role="button">Previous Page</button>
             <button id="nextPage" class="btn btn-outline-primary navigation-link next" role="button">Next Page</button>
         </div>
