Working on Chapter 3 Content

--- a/2 Unit One Content/Is Mean Enough to Describe a Dataset.html
+++ b/2 Unit One Content/Is Mean Enough to Describe a Dataset.html
@@ -84,11 +84,13 @@
 <div class="solution">
 <h3 class="example-header">Solution</h3>
 <ul>
-<li><strong>Part A:</strong> The mean is the sum of all data values divided by the number of values in the set. The given data set is \( 76, 74, 83, 97, 70 \). \[ \begin{align*} \text{{Mean}} &amp;= \dfrac{76 + 74 + 83 + 97 + 70}{{5}} \\\\ &amp;= \dfrac{{400}}{{5}} \\\\ &amp;= 80 \end{align*} \]</li>
-<li><strong>Part B:</strong> The given data set is \( 82, 81, 76, 85, 76 \). We follow the same process. \[ \begin{align*} \text{{Mean}} &amp;= \dfrac{82 + 81 + 76 + 85 + 76}{{5}} \\\\ &amp;= \dfrac{{400}}{{5}} \\\\ &amp;= 80 \end{align*} \]</li>
-<li><strong>Part C:</strong> Even though both data sets have the same mean, they differ in their distribution. The first data set has a wider range (from 70 to 97), indicating more variability, while the second data set has a smaller range (from 76 to 85), showing less variability.</li>
+<li><strong>Part A:</strong> The mean is the sum of all data values divided by the number of values in the set. The given data set is \( 76, 74, 83, 97, 70 \). \[ \begin{align*} \text{Mean} &amp;= \dfrac{76 + 74 + 83 + 97 + 70}{{5}} \\\\ &amp;= \dfrac{{400}}{{5}} \\\\ &amp;= 80 \end{align*} \]</li>
+<li><strong>Part B:</strong> The given data set is \( 82, 81, 76, 85, 76 \). We follow the same process. \[ \begin{align*} \text{Mean} &amp;= \dfrac{82 + 81 + 76 + 85 + 76}{{5}} \\\\ &amp;= \dfrac{{400}}{{5}} \\\\ &amp;= 80 \end{align*} \]</li>
+<li><strong>Part C:</strong> <div class="inches" data-height=".8in"></div><div class="dontprint">Even though both data sets have the same mean, they differ in their distribution. The first data set has a wider range (from 70 to 97), indicating more variability, while the second data set has a smaller range (from 76 to 85), showing less variability.</div></li>
 </ul>
-<p>$$\tag*{\(\blacksquare\)}$$</p>
+<div class="dontprint">
+    <p>$$\tag*{\(\blacksquare\)}$$</p>
+</div>
 </div>
 <!-- End Solution -->
 <h2>Conclusion</h2>
