--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
                                 <li><a href="2 Unit One Content/Skewness Affects on Mean Median Mode of a Dataset.html">How Skewness Affects the Mean, Median, and Mode of a Dataset</a></li>
                                 <li><a href="2 Unit One Content/Calculating a Weighted Mean.html">Calculating a Weighted Mean</a></li>
                                 <li><a href="2 Unit One Content/Is Mean Enough to Describe a Dataset.html">Is Mean Enough to Describe a Dataset?</a></li>
+                                <li><a href="2 Unit One Content/Calculating the Range of a Dataset.html">Calculating the Range of a Dataset</a></li>
+                                <li><a href="2 Unit One Content/Calculating Deviations of a Dataset.html">Calculating Deviations of a Dataset</a></li>
+                                <li><a href="2 Unit One Content/Understanding Standard Deviation.html">Understanding Standard Deviation</a></li>
+                                <li><a href="2 Unit One Content/Finding Outliers for Normal Distributions.html">Finding Outliers for Normal Distributions</a></li>
+                                <li><a href="2 Unit One Content/Empirical Rule.html">Empirical Rule</a></li>
                                 <li><a href="2 Unit One Content/Measures of Variation.html">Measures of Variation</a></li>
                                 <li><a href="2 Unit One Content/Measures of Location.html">Measures of Location</a></li>
                                 <li><a href="2 Unit One Content/Chapter 3 Lecture Notes.html">Chapter 3 Lecture Notes
