Putting the Common MyOpenMath codes page linked into homepage

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                             <h2>Start Here</h2>
                             <ul>
                                 <li><a href="1 Start Here/About This Course.html">About this Course</a></li>
-                                <li><a href="1 Start Here/GeoGebra Embed Codes.html">GeoGebra Applets for Statistics</a>
-                                </li>
+                                <li><a href="1 Start Here/GeoGebra Embed Codes.html">GeoGebra Applets for Statistics</a></li>
+                                <li><a href="1 Start Here/Common MyOpenMath Codes.html">Copyable MyOpenMath Codes Used in Project</a></li>
                             </ul>
                         </section>
 
