Added webpage for video tutorials

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                             <ul>
                                 <li><a href="1 Start Here/About This Course.html">About this Course</a></li>
                                 <li><a href="1 Start Here/GeoGebra Embed Codes.html">GeoGebra Applets for Statistics</a></li>
+                                <li><a href="1 Start Here/Video Tutorials for GeoGebra Applets.html">Video Tutorials for GeoGebra Apps</a></li>
                                 <li><a href="1 Start Here/Common MyOpenMath Codes.html">Copyable MyOpenMath Codes Used in Project</a></li>
                             </ul>
                         </section>
