Updating Video Tutorial page and making style for <p> tags on this page

--- a/1 Start Here/Video Tutorials for GeoGebra Applets.html
+++ b/1 Start Here/Video Tutorials for GeoGebra Applets.html
@@ -89,12 +89,27 @@
                         <h2>Chapter 3 GeoGebra Tool Tutorials</h2>
                         <div class="iframe-copy"
                             style="background-color: #DFF6DD; color: #034732; font-size: 16px; padding: 10px; border-radius: 5px; font-family: 'Roboto', Arial, sans-serif; margin: 5px 0px;">
-                            <p>The following video is a tutorial for using the Summary Stats GeoGebra Application</p>
+                            <p class="p-iframe-copy">The following video is a tutorial for using the Summary Stats GeoGebra Application</p>         
                             <iframe width="560" height="315"
                                 src="https://www.youtube.com/embed/skC-41dgvDE?si=hkSzlTRdAvbAAqas"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                                <p class="p-iframe-copy">
+                                    The button below contains an iframe embed code for this YouTube video tutorial of the GeoGebra Summary Statistics tool, ready to be copied and used in MyOpenMath or an LMS.
+                                </p>
+                                <button onclick="copyCodeToClipboard('summaryStatsGeoGebraAppVideo')" 
+                                    style="background-color: #034078; color: white; border: none; padding: 8px 15px; font-size: 14px; border-radius: 5px; cursor: pointer;">
+                                    Copy YouTube Video Embed Code
+                                </button>
+                                <textarea id="summaryStatsGeoGebraAppVideo" style="position: absolute; left: -9999px;">
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/skC-41dgvDE?si=kEAJetIXtwW6F4fI" 
+                                        title="YouTube video player" frameborder="0" 
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                                    </iframe>
+                                </textarea>        
                         </div>
                     </section>
 
